Updated build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,44 +1,36 @@
-name: Build Mesa on Arch Linux
+name: Build and Install Package from PKGBUILD
 
 on:
   push:
     branches:
-      - main  # Adjust to your branch
+      - main  # Change this to the branch you want to trigger builds on
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Arch Linux Docker container
       run: |
         docker pull archlinux:latest
-        docker run -d --name arch-mesa -v ${{ github.workspace }}:/workspace -w /workspace archlinux:latest tail -f /dev/null
+        docker run -d --name arch-builder -v ${{ github.workspace }}:/workspace -w /workspace archlinux:latest tail -f /dev/null
 
-    - name: Install dependencies on Arch Linux
+    - name: Install dependencies for building on Arch Linux
       run: |
-        docker exec arch-mesa bash -c "pacman -Sy --noconfirm base-devel meson ninja gcc python python-pip wayland vulkan-headers libx11 libxext libxdamage libxfixes libxcb libxxf86vm"
-    
-    - name: Configure the build on Arch Linux
-      run: |
-        docker exec arch-mesa bash -c "meson setup build -Dbuildtype=release -Dplatforms=x11 -Ddri-drivers=auto -Dvulkan-drivers=auto"
+        docker exec arch-builder bash -c "pacman -Sy --noconfirm base-devel git"
 
-    - name: Compile Mesa on Arch Linux
+    - name: Build the package using PKGBUILD
       run: |
-        docker exec arch-mesa bash -c "meson compile -C build"
-
-    - name: Run tests on Arch Linux
-      run: |
-        docker exec arch-mesa bash -c "meson test -C build"
+        docker exec arch-builder bash -c "cd /workspace && makepkg -si --noconfirm"
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: mesa-build
-        path: ./build/  # Adjust path to where the compiled files or installer are located
+        name: built-package
+        path: ./*.pkg.tar.*  # Uploads any package file with possible extensions (zst, xz, gz)
     
     - name: Cleanup
-      run: docker rm -f arch-mesa
+      run: docker rm -f arch-builder
