--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,15 +22,20 @@ jobs:
       run: |
         docker exec arch-builder bash -c "pacman -Sy --noconfirm base-devel git"
 
-    - name: Build the package using PKGBUILD
+    - name: Create a non-root user to run makepkg
       run: |
-        docker exec arch-builder bash -c "cd /workspace && makepkg -si --noconfirm"
+        docker exec arch-builder bash -c "useradd -m builder && echo 'builder ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers"
+        docker exec arch-builder bash -c "chown -R builder /workspace"
+
+    - name: Build the package using PKGBUILD (as non-root user)
+      run: |
+        docker exec -u builder arch-builder bash -c "cd /workspace && makepkg -si --noconfirm"
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: built-package
         path: ./*.pkg.tar.*  # Uploads any package file with possible extensions (zst, xz, gz)
-    
+
     - name: Cleanup
       run: docker rm -f arch-builder
