--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,14 @@ jobs:
         docker exec arch-builder bash -c "useradd -m builder && echo 'builder ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers"
         docker exec arch-builder bash -c "chown -R builder /workspace"
 
+    - name: Import missing PGP keys (if necessary)
+      run: |
+        docker exec -u builder arch-builder bash -c "gpg --keyserver keyserver.ubuntu.com --recv-keys 8D8E31AFC32428A6"
+
     - name: Build the package using PKGBUILD (as non-root user)
       run: |
         docker exec -u builder arch-builder bash -c "cd /workspace && makepkg -si --noconfirm"
-    
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
